@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2010 - TortoiseSVN
+// Copyright (C) 2003-2010, 2012 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -34,6 +34,7 @@ public:
     CStoreSelection(CLogDlg* dlg);
     CStoreSelection(CLogDlg* dlg, const SVNRevRangeArray& revRange);
     ~CStoreSelection();
+    void ClearSelection();
 protected:
     CLogDlg* m_logdlg;
     quick_hash_set<long> m_SetSelectedRevisions;
